--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,6 @@ sonar.organization=firas-dridi
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=**/tests/**,**/controller/**,setup.py,test_wheel.py
